<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Uyari">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uy1"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:padding="5dp"/>
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uy2"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uy3"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uy4"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uy5"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uy6"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uy7"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uy8"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:padding="5dp"/>
        <RadioButton
            android:id="@+id/radiyo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Kabul ediyorum."/>
        <Button
            android:id="@+id/btn_baslat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Başlat"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/navbar"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>



    </LinearLayout>

</ScrollView>